# rfmux

./: .gitignore  .lfsconfig  CHANGELOG.md  CMakeLists.txt  LICENSE  README.Windows  README.Windows.md  README.md  environment.yml  pyproject.toml  release-please-config.json  requirements.txt  test.sh  tox.ini
.github/: dependabot.yml
.github/workflows/: build-wheels.yml  build.yml  package.yml  periscope-tests.yml  release-and-build.yml  release-please.yml  release.yml
.github/workflows/.ipynb_checkpoints/: periscope-tests-checkpoint.yml
.jupyter/lab/user-settings/@jupyterlab/docmanager-extension/: plugin.jupyterlab-settings
docs/: Making-Channel-Spectra.ipynb  R1.5 Release Notes and Changes.ipynb  Repo_description.md  installation.md
docs/Demos/: Noise Spectra.ipynb
docs/Release Notes/: R1.5 Release Notes and Changes.ipynb
docs/Technical Documentation/: Signal Path Taps and Filtering.ipynb
docs/guides/: firmware.md  getting-started.md  networking.md
firmware/: .gitattributes  CHANGES  README.md
firmware/r1.5.4/: fsbl.elf  parser  rootfs.ext4.bz2  u-boot.itb
firmware/r1.5.5/: fsbl.elf  parser  rootfs.ext4.bz2  u-boot.itb
firmware/r1.5.6/: fsbl.elf  parser  rootfs.ext4.bz2
firmware/r1.6.0/: rootfs.ext4.bz2
firmware/r1.6.0rc1/: rootfs.ext4.bz2  u-boot.itb
firmware/r1.6.0rc2/: rootfs.ext4.bz2
firmware/r1.6.0rc3/: rootfs.ext4.bz2
firmware/r1.6.1/: rootfs.ext4.bz2
firmware/r1.6.1rc1/: rootfs.ext4.bz2
firmware/r1.6.1rc2/: rootfs.ext4.bz2
firmware/r1.6.2rc1/: rootfs.ext4.bz2
firmware/r1.6.2rc2/: rootfs.ext4.bz2
firmware/r1.7.0rc4/: README  fsbl.elf
home/: README.ipynb  README.md
home/Demos/: Network Analyses.ipynb  Noise Spectra.ipynb  Trigger_capture_run.ipynb  simplified_tuning_flow.py
home/Release Notes/: R1.5 Release Notes and Changes.ipynb
rfmux/: __init__.py  paths.py  streamer.py
rfmux/algorithms/: README
rfmux/algorithms/measurement/: __init__.py  bias_kids.py  fitting.py  fitting_nonlinear.py  multisweep.py  pulse_detection.py  pulse_hdf5.py  pulse_histograms.py  py_get_pfb_samples.py  py_get_samples.py  py_run_pfb_streamer.py  py_set_frequency.py  slow_trigger_capture.py  take_netanal.py  trigger_capture.py
rfmux/core/: __init__.py  crs.py  dirfile.py  hardware_map.py  mock.py  mock_config.py  mock_constants.py  mock_crs_core.py  mock_crs_helper.py  mock_resonator_model.py  mock_server.py  mock_udp_streamer.py  schema.py  session.py  streamer.py  transferfunctions.py  tuber.py
rfmux/core/utils/: phase_calibrations_r1.5.pkl  transferfunctions.py
rfmux/mock/: README.md  __init__.py  config.py  crs.py  helpers.py  resonator_model.py  server.py  udp_streamer.py
rfmux/mr_resonator/: LICENSE  __init__.py  jit_physics.py  mr_complex_resonator.py  mr_lekid.py  utils.py
rfmux/packets/: CMakeLists.txt  __init__.py  packets.py
rfmux/packets/include/: packet.h  packets.hpp
rfmux/packets/src/: bindings.cpp  packets.cpp
rfmux/reference-notebooks/: README.md
rfmux/reference-notebooks/Demos/: Network Analyses.ipynb  Noise From Parser Data.ipynb  Noise Spectra.ipynb  simplified_tuning_flow.py
rfmux/reference-notebooks/Release Notes/: R1.7 Release Notes and Changes.ipynb
rfmux/reference-notebooks/Technical Documentation/: Signal Path Taps and Filtering.ipynb
rfmux/rfmux/core/: schema.py  session.py  tworoutine.py
rfmux/rfmux/core/utils/: transferfunctions.py
rfmux/streamer/: .gitignore  CMakeLists.txt  __init__.py  socket.py
rfmux/streamer/include/: packet.h  packets.hpp  tuber_support.hpp
rfmux/streamer/src/: bindings.cpp  packets.cpp
rfmux/test/: mock.py  test_mock.py  test_tworoutine.py
rfmux/tools/: README.md  __init__.py  cli.py  firmware.py  multisweep_window.py  network_analysis_window.py  parser.py  periscope.py  periscope_app.py  periscope_dialogs.py  periscope_tasks.py  periscope_ui.py  periscope_utils.py  periscope_window.py  qc.py  test_periscope.py
rfmux/tools/periscope/: README.md  __init__.py  __main__.py  aggregate_data_adapter.py  amplitude_colorbar.py  app.py  app_runtime.py  bias_kids_dialog.py  custom_material_dialog.py  detector_digest_dialog.py  detector_digest_panel.py  dialogs.py  dock_manager.py  extract_params.py  find_resonances_dialog.py  find_resonances_settings_panel.py  fit_settings_panel.py  initialize_crs_dialog.py  main_plot_panel.py  mock_configuration_dialog.py  multisweep_aggregate_dialog.py  multisweep_aggregate_panel.py  multisweep_aggregate_tabbed_panel.py  multisweep_dialog.py  multisweep_grid_helpers.py  multisweep_panel.py  multisweep_window.py  network_analysis_base.py  network_analysis_dialog.py  network_analysis_export.py  network_analysis_panel.py  network_analysis_window.py  noise_spectrum_dialog.py  noise_spectrum_panel.py  notebook_panel.py  parameter_histograms_panel.py  session_browser_panel.py  session_manager.py  session_startup_dialog.py  settings.py  (+3 more)
rfmux/tools/periscope/icons/: .gitkeep
rfmux/tools/qc/: __init__.py  conftest.py  pytest.ini  report_generator.py  test_crs.py  test_crs_basics.py  test_crs_housekeeping.py
rfmux/tuber/: client.py  codecs.py  server.py
src/: packet.hpp  parser.cpp
test/: conftest.py  mock_vs_real.py  test_calls.py  test_measurement_flow.py  test_mock_vs_real.py  test_packets.py  test_periscope_flow.py  test_pulse_capture.py  test_schema.py  test_spotcheck.py  test_threads.py  test_tworoutine.py
test/crs_qc/: conftest.py  crs_qc.py  report_generator.py  run_qc.py  style.css  test_crs.py  test_crs_basics.py  test_crs_housekeeping.py  test_crs_loopback.py
test/notebooks/: .gitignore  test_notebooks.py  test_py_get_samples.md
tuber/: __init__.py  client.py  server.py
