[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11", "setuptools-scm>=8.0"]
build-backend = "scikit_build_core.build"

[project]
name = "rfmux"
dynamic = ["version"]
description = "Python library for t0.technology CRS board running rfmux firmware"
authors = [
  {name="Graeme Smecher", email="gsmecher@t0.technology"},
  {name="Joshua Montgomery", email="joshua@t0.technology"},
]
dependencies = [
  "PyQt6",
  "aiohttp",
  "ipykernel<7",  # Pin to 6.x for qtconsole in-process kernel compatibility (ipykernel 7.x has a bug)
  "ipython",
  "jupyterlab",
  "matplotlib",
  "numba",  # Required for high-performance physics calculations in MockCRS
  "numpy",
  "psutil",
  "pyqtgraph",
  "pytest",
  "pytest-asyncio",
  "pyyaml",
  "qtconsole",
  "requests_futures",
  "scipy",
  "simplejson",
  "sqlalchemy",
  # Intel Threading Building Blocks for numba parallel execution.
  # On macOS, you need libomp instead
  "tbb; sys_platform != 'darwin'",
]

requires-python = ">=3.9"

[project.optional-dependencies]

# pygetdata is not on PyPI, must be installed via system package manager
# Debian/Ubuntu: apt-get install python3-pygetdata
dirfile = []

[project.scripts]
parser = "rfmux.tools.parser:main"

[project.gui-scripts]
periscope = "rfmux.tools.periscope.__main__:main"

[project.urls]
homepage = "https://github.com/t0/rfmux"
repository = "https://github.com/t0/rfmux"

[tool.scikit-build]
cmake.source-dir = "rfmux/streamer"
wheel.packages = ["rfmux"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["rfmux/_version.py"]

[tool.setuptools]
packages = ["rfmux"]

[tool.setuptools_scm]
version_file = "rfmux/_version.py"
fallback_version = "0.0.0"
